tests/0006-assignment-infix-operator.src.err
ERROR: not yet implemented
 | a + b = "value";
           ^
